<resources>
    <string name="app_name">Attempt one</string>
    <string name="weath">Weather surprises</string>
    <string name="weather_type">Sunny</string>
    <string name="text_degrees">%.2f \u2103</string>
    <string name="back_button_name">Back</string>
    <string name="pr">Pressure</string>
    <string name="wd">Wind speed</string>
    <string name="hm">Humidity</string>
    <string name="kaz">Kazan, RU</string>
    <string name="mos">Moscow, RU</string>
    <string name="spb">St.Petersburg, RU</string>
    <string name="button_get_weather_name">Get Weather</string>
    <string name="select_city">Please select city</string>
    <string name="add_weather_parametres">Additional weather parametres</string>
    <string name="city_not_selected">City is not selected</string>
    <string name="double_check_with_yandex">Double check with Yandex</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="get_temperature_history">Get temperature history</string>
    <string name="daytime">Daytime</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="url_pogoda">https://yandex.ru/pogoda/%s</string>
    <string-array name="temperatures_history">
        <item>11 February 2019, -1 \u2103</item>
        <item>10 February 2019, -1 \u2103</item>
        <item> 9 February 2019, -1  \u2103</item>
        <item> 8 February 2019, +2  \u2103</item>
        <item> 7 February 2019, -1  \u2103</item>
        <item> 6 February 2019, -1  \u2103</item>
        <item> 5 February 2019, -1  \u2103</item>
        <item> 4 February 2019, +3  \u2103</item>
        <item> 3 February 2019,  0  \u2103</item>
        <item> 2 February 2019, -4  \u2103</item>
        <item> 1 February 2019, -2  \u2103</item>
        <item>31 January 2019,  +1  \u2103</item>
        <item>30 January 2019,  -2  \u2103</item>
        <item>29 January 2019,  -3  \u2103</item>
        <item>28 January 2019,  -7  \u2103</item>
        <item>27 January 2019,  -8  \u2103</item>
        <item>26 January 2019, -11  \u2103</item>
        <item>25 January 2019, -10  \u2103</item>
        <item>24 January 2019, -11  \u2103</item>
        <item>23 January 2019, -11  \u2103</item>
        <item>22 January 2019, -13  \u2103</item>
    </string-array>
</resources>
