<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/StandardScreenTheme">

        <TextView
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weath" />

        <TextView
            android:id="@+id/place"
            style="@style/TextStandardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/t"
            style="@style/TextStandardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/w_type"
            style="@style/TextStandardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_type" />

        <TextView
            android:id="@+id/pressure_2"
            style="@style/TextStandardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wind_2"
            style="@style/TextStandardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wd"
            android:visibility="gone" />

        <TextView
            android:id="@+id/humidity_2"
            style="@style/TextStandardStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hm"
            android:visibility="gone" />

        <!--<android.support.design.button.MaterialButton
            android:id="@+id/button_back"
            style="@style/ButtonStyleNo1"
            android:text="@string/back_button_name"
            app:cornerRadius="10sp" />-->

        <android.support.design.button.MaterialButton
            android:id="@+id/button_double_check"
            style="@style/ButtonStyleNo1"
            android:text="@string/double_check_with_yandex"
            app:cornerRadius="10sp"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/button_share"
            style="@style/ButtonStyleNo1"
            android:text="@string/share_with_friends"
            app:cornerRadius="10sp"/>

        <android.support.design.button.MaterialButton
            android:id="@+id/button_temp_history"
            style="@style/ButtonStyleNo1"
            android:text="@string/get_temperature_history"
            app:cornerRadius="10sp"/>

    </LinearLayout>

</ScrollView>



