<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/weath"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/colorBlue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/temp"
        android:textColor="@color/colorBlue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/w_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/WT"
        android:textColor="@color/colorBlue"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/pressure_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/pr"
        android:textColor="@color/colorBlue"
        android:textSize="30sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/wind_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/wd"
        android:textColor="@color/colorBlue"
        android:textSize="30sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/humidity_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/hm"
        android:textColor="@color/colorBlue"
        android:textSize="30sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/back_button_name" />

</LinearLayout>
